Fix blurred canvas

--- a/style.css
+++ b/style.css
@@ -8,6 +8,4 @@ h1 {
 
 .container canvas {
     padding: 20px;
-    width: 1024px;
-    height: 256px;
     }
